[tool.poetry]
name = "prefect_poc"
version = "0.1.0"
description = "Test Prefect"
authors = ["netpanda <@davidban77>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
prefect = "^2.14.12"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"

# [tool.poetry.scripts]
# infra-ops = "infra_ops.main:app"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
